Thu May 28 06:55:53 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* ext/tk/sample/figmemo_sample.rb (open_file),
	  ext/tk/sample/tktextio.rb (TkTextIO): fix typo in messages.
	  [Fix GH-916]

Wed May 27 09:50:51 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): use RB_GC_GUARD instead of volatile
	  [ruby-core:69371] [Bug #11185]

Wed May 27 09:27:30 2015  Eric Wong  <e@80x24.org>

	* lib/drb/drb.rb (set_sockopt): remove redundant fcntl call
	* lib/drb/unix.rb (set_sockopt): ditto
	  [ruby-core:69128] [Feature #11137]

Tue May 26 22:10:43 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (rb_alias): should resolve refined methods.
	  [ruby-core:69360] [Bug #11182]

Tue May 26 21:35:13 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/defines.h (RUBY_ATTR_ALLOC_SIZE): fix condition.

Mon May 25 22:35:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): after the relations is changed,
	  @changesets is no longer right.

Mon May 25 11:27:14 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (setup_overlapped): seek to the file end only when
	  writing (mode:a), not reading (mode:a+, read).

Mon May 25 00:27:37 2015  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c (Numeric#negative?): [DOC] Fix call-seq.
	  Patch by @yui-knk. [Fixes GH-908]

Sun May 24 01:35:22 2015  Koichi Sasada  <ko1@atdot.net>

	* debug.c (ruby_debug_print_id): use rb_id2name() for fprintf().

Sat May 23 18:38:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/*.1: updated dates in man pages.
	  [ruby-dev:48988] [Bug #11171]

Sat May 23 03:10:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): should return the count of
	  actually eaten characters, include escape sequences.

Fri May 22 22:36:14 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Remove obsolete Prime.new