@@ -51,6 +51,8 @@ with all sufficient information, see the ChangeLog file.
 
 * ObjectSpace (objspace)
   * ObjectSpace.count_imemo_objects is added.
+  * ObjectSpace.internal_class_of is added.
+  * ObjectSpace.internal_super_of is added.
 
 * OpenSSL
   * OpenSSL::SSL::SSLSocket#accept_nonblock and
